@@ -1,7 +1,7 @@
-KRenderingPaintServer {id="Gradient" [type=LINEAR-GRADIENT] [stops=[(0.00,#0000FF), (1.00,#FF0000)]] [bounding box mode=0] [start=(10,10)] [end=(440,10)]}
+KRenderingPaintServer {id="Gradient" [type=LINEAR-GRADIENT] [stops=[(0.30,#0080007F), (1.00,#FF0000)]] [bounding box mode=0] [start=(150,10)] [end=(440,10)]}
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
     RenderSVGContainer {svg} at (10,10) size 430x170
       RenderSVGContainer {defs} at (0,0) size 0x0
-      RenderPath {rect} at (10,10) size 430x80 [fill={[type=LINEAR-GRADIENT] [stops=[(0.00,#0000FF), (1.00,#FF0000)]] [bounding box mode=0] [start=(10,10)] [end=(440,10)]}] [data="M10.00,10.00L440.00,10.00L440.00,90.00L10.00,90.00"]
-      RenderPath {rect} at (10,100) size 430x80 [fill={[type=LINEAR-GRADIENT] [stops=[(0.00,#0000FF), (1.00,#FF0000)]] [bounding box mode=0] [start=(10,10)] [end=(440,10)]}] [data="M10.00,100.00L440.00,100.00L440.00,180.00L10.00,180.00"]
+      RenderPath {rect} at (10,10) size 430x80 [fill={[type=LINEAR-GRADIENT] [stops=[(0.30,#0080007F), (1.00,#FF0000)]] [bounding box mode=0] [start=(150,10)] [end=(440,10)]}] [data="M10.00,10.00L440.00,10.00L440.00,90.00L10.00,90.00"]
+      RenderPath {rect} at (10,100) size 430x80 [fill={[type=LINEAR-GRADIENT] [stops=[(0.30,#0080007F), (1.00,#FF0000)]] [bounding box mode=0] [start=(150,10)] [end=(440,10)]}] [data="M10.00,100.00L440.00,100.00L440.00,180.00L10.00,180.00"]
