@@ -1,3 +1,13 @@
+2006-12-21  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Reviewed by Maciej.
+
+        Fix dynamic gradient changes, via JS. It actually worked before, but it
+        wasn't repainted. Behave just like the pattern notifyAttributeChange() code now.
+
+        * ksvg2/svg/SVGGradientElement.cpp:
+        (WebCore::SVGGradientElement::notifyAttributeChange):
+
 2006-12-20  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
