@@ -1,3 +1,13 @@
+2006-12-21  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Reviewed by Maciej.
+
+        Fix dynamic gradient changes, via JS.
+
+        * svg/custom/js-update-gradient-expected.png:
+        * svg/custom/js-update-gradient-expected.txt:
+        * svg/custom/js-update-gradient.svg:
+
 2006-12-20  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Reviewed by Sam.
